--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -44,11 +44,10 @@
         <div class="container mx-auto px-4 py-20 text-center">
             <h2 class="text-4xl md:text-5xl font-bold mb-4">Olá, eu sou <span class="gradient-text">Everardo Junior</span></h2>
             <p class="text-xl text-gray-600 mb-8">Desenvolvedor Full Stack</p>
-            <a href="#projetos" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg inline-block transition">
+            <a href="https://github.com/JuniorDeevoloper" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg inline-block transition">
                 Ver Projetos
             </a>
-        </div>
-    </section>
+            
 
     <!-- Seção Sobre -->
     <section id="sobre" class="py-16 bg-white">
@@ -77,7 +76,7 @@
                         </div>
                         <div>
                             <p class="font-medium">Experiência:</p>
-                            <p class="text-gray-600">4+ Anos</p>
+                            <p class="text-gray-600">Quatro Anos De Experiência</p>
                         </div>
                         <div>
                             <p class="font-medium">Localização:</p>
